# vector-bytestring

./: ForeignPtr.hs  LICENSE  README.markdown  Utils.hs  bench.hs  compare_strict_Word8.sh  vector-bytestring.cabal
Data/Vector/Storable/: ByteString.hs
Data/Vector/Storable/ByteString/: Builder.hs  Char8.hs  Internal.hs  Lazy.hs  Legacy.hs  Unsafe.hs
Data/Vector/Storable/ByteString/Builder/: ASCII.hs  Extra.hs  Internal.hs  Prim.hs
Data/Vector/Storable/ByteString/Builder/Prim/: ASCII.hs  Binary.hs  Extra.hs  Internal.hs
Data/Vector/Storable/ByteString/Builder/Prim/Internal/: Base16.hs  Floating.hs  UncheckedShifts.hs
Data/Vector/Storable/ByteString/Lazy/: Char8.hs  Internal.hs  Legacy.hs
bench/: bench.hs
cbits/: bytestring.c
include/: bytestring.h
tests/: Bench.hs  BenchUtils.hs  FusionBench.hs  FusionProperties.hs  Hash.hs  Makefile  Properties.hs  QuickCheckUtils.hs  Rules.hs  Units.hs  Words.hs  down-fuse.hs  edit.hs  fuse.hs  groupby.hs  iavor.hs  inline.hs  lazy-hclose.hs  lazybuild.hs  lazybuildcons.hs  lazyio.hs  lazylines.hs  lazyread.hs  letter_frequency.hs  linesort.hs  pack.hs  revcomp.hs  spellcheck.hs  sum.hs  test-compare.hs  unpack.hs  wc.hs  zipwith.hs
