name:          vector-bytestring
version:       0.0.0.0
cabal-version: >=1.6
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     2011 Bas van Dijk <v.dijk.bas@gmail.com>
author:        Bas van Dijk <v.dijk.bas@gmail.com>
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
homepage:      https://github.com/basvandijk/vector-bytestring/
bug-reports:   https://github.com/basvandijk/vector-bytestring/issues
stability:     experimental
category:      Data
synopsis:      ByteStrings as type synonyms of Vectors of Word8s
description:   ByteStrings as type synonyms of Vectors of Word8s

extra-source-files: README.markdown

source-repository head
  Type:     git
  Location: git://github.com/basvandijk/vector-bytestring.git

Library
  GHC-Options: -Wall

  build-depends: base       >= 4     && < 4.5
               , primitive  >= 0.3.1 && < 0.5
               , ghc-prim   >= 0.2   && < 0.3
               , vector     >= 0.9   && < 0.10
               , bytestring >= 0.9   && < 0.10

  exposed-modules: Data.Vector.Storable.ByteString
                   Data.Vector.Storable.ByteString.Internal
                   Data.Vector.Storable.ByteString.Unsafe
                   Data.Vector.Storable.ByteString.Legacy
                   Data.Vector.Storable.ByteString.Char8
                   Data.Vector.Storable.ByteString.Lazy
                   Data.Vector.Storable.ByteString.Lazy.Internal
                   Data.Vector.Storable.ByteString.Lazy.Char8

  other-modules: Utils

test-suite prop-compiled
  type:           exitcode-stdio-1.0
  main-is:        Properties.hs
  hs-source-dirs: . tests
  build-depends:  base, random, directory,
                  QuickCheck >= 2.3 && < 3
  build-depends:  ghc-prim
  ghc-options:    -fno-enable-rewrite-rules
