name:          vector-bytestring
version:       0.0.0.2
cabal-version: >=1.9.2
build-type:    Simple
license:       BSD3
license-file:  LICENSE
copyright:     2011 Bas van Dijk <v.dijk.bas@gmail.com>
author:        Bas van Dijk <v.dijk.bas@gmail.com>
maintainer:    Bas van Dijk <v.dijk.bas@gmail.com>
homepage:      https://github.com/basvandijk/vector-bytestring
bug-reports:   https://github.com/basvandijk/vector-bytestring/issues
stability:     experimental
category:      Data
synopsis:      ByteStrings as type synonyms of Storable Vectors of Word8s
description:
  ByteStrings as type synonyms of Storable Vectors of Word8s

extra-source-files: README.markdown

                    tests/*.hs
                    tests/data
                    tests/macros.m4
                    tests/Makefile
                    tests/spellcheck-input.txt
                    tests/Usr.Dict.Words

source-repository head
  Type:     git
  Location: git://github.com/basvandijk/vector-bytestring.git

Library
  build-depends: base       >= 4     && < 4.7
               , primitive  >= 0.3.1 && < 0.6
               , ghc-prim   >= 0.2   && < 0.4
               , vector     >= 0.9.1 && < 0.11
               , deepseq    >= 1.1   && < 1.4
               , bytestring >= 0.9   && < 0.11

  exposed-modules: Data.Vector.Storable.ByteString
                   Data.Vector.Storable.ByteString.Internal
                   Data.Vector.Storable.ByteString.Unsafe
                   Data.Vector.Storable.ByteString.Char8
                   Data.Vector.Storable.ByteString.Legacy
                   Data.Vector.Storable.ByteString.Lazy
                   Data.Vector.Storable.ByteString.Lazy.Internal
                   Data.Vector.Storable.ByteString.Lazy.Char8
                   Data.Vector.Storable.ByteString.Lazy.Legacy

  ghc-options: -Wall -O2 -funbox-strict-fields

  c-sources:        cbits/bytestring.c
  include-dirs:     include
  includes:         bytestring.h
  install-includes: bytestring.h

test-suite prop-compiled
  type: exitcode-stdio-1.0

  main-is:        Properties.hs
  hs-source-dirs: tests

  build-depends: vector-bytestring
               , base       >= 4     && < 4.7
               , random     >= 1.0.1 && < 1.1
               , directory  >= 1.0   && < 1.3
               , QuickCheck >= 2.3   && < 3

  ghc-options: -fno-enable-rewrite-rules

benchmark bench
  type: exitcode-stdio-1.0

  main-is:        bench.hs
  hs-source-dirs: bench

  build-depends: vector-bytestring
               , base       >= 4     && < 4.7
               , deepseq    >= 1.1   && < 1.4
               , bytestring >= 0.9   && < 0.11
               , criterion  >= 0.6.1 && < 0.7

  ghc-options: -Wall -O2 -funbox-strict-fields
